update config-server, discovery, security, api-gateway rpc